--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon-300x300.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,600,700,900%7CRaleway:500">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -127,17 +127,16 @@
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="projects.html">Products</a>
                                             <!-- RD Navbar Dropdown-->
                                             <ul class="rd-menu rd-navbar-dropdown">
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Product List</a></li>
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">NETIS Registered Product</a></li>
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">General Catalog Info.</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="products-category.html">Product List</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="registered-product.html">NETIS Registered Product</a></li>
                                             </ul>
                                         </li>
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="projects.html">Information</a>
                                             <!-- RD Navbar Dropdown-->
                                             <ul class="rd-menu rd-navbar-dropdown">
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Company</a></li>
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Projects</a></li>
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Contact</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="about-us.html">Company</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="projects.html">Projects</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="contacts.html">Contact</a></li>
                                             </ul>
                                         </li>
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="projects.html">Downloads</a>
@@ -151,9 +150,9 @@
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="projects.html">Media & Gallery</a>
                                             <!-- RD Navbar Dropdown-->
                                             <ul class="rd-menu rd-navbar-dropdown">
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Photo Gallery</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="grid-gallery.html">Photo Gallery</a></li>
                                                 <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">Video Gallery</a></li>
-                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="#">News & Events</a></li>
+                                                <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="blog-grid.html">News & Events</a></li>
                                             </ul>
                                         </li>
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Career</a></li>
