--- a/registered-product.html
+++ b/registered-product.html
@@ -246,7 +246,7 @@
         <section class="bg-gray-7">
             <div class="breadcrumbs-custom box-transform-wrap context-dark">
                 <div class="container">
-                    <h3 class="breadcrumbs-custom-title">Product List</h3>
+                    <h3 class="breadcrumbs-custom-title">NETIS registered product</h3>
                     <div class="breadcrumbs-custom-decor"></div>
                 </div>
                 <div class="box-transform" style="background-image: url(images/bg-typography.jpg);"></div>
@@ -255,7 +255,7 @@
                 <ul class="breadcrumbs-custom-path">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Product</a></li>
-                    <li class="active">Product List</li>
+                    <li class="active">NETIS registered product</li>
                 </ul>
             </div>
         </section>
@@ -263,127 +263,38 @@
         <!-- Services 3-->
         <section class="section section-inset-5 bg-default">
             <div class="container">
-                <div class="row no-md-gutters justify-content-center bordered-2">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">AE water reducing agent</a></h5>
-                                <p class="box-icon-modern-text">It is a good AE water reducer mainly composed of lignin and increases the durability of concrete.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-12 mb-4">
+                        <article class="products-item d-flex">
+                            <div class="col-md-4">
+                                <h5><i class="mdi mdi-forward"></i>Flowric T</h5>
+                            </div>
+                            <div class="col-md-8">
+                                <p>This technology adds Flowric-T as an auxiliary agent to improve workability in pavement concrete construction in the hot mid-summer period to reduce the sudden drop in slump.The use of this technology delays the hardening of concrete, thereby improving the workability of pavement concrete.</p>
+                                <p>Registration date: August, R2<br>
+                                    Registration number: KT-200070-A</p>
+                            </div>
+                        </article>
+                        <div class="download-pdf-catalog text-left">
+                            <a href="#"><i class="mdi mdi-file-pdf"></i> Click here for PDF catalog</a>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">High performance AE water reducing agent</a></h5>
-                                <p class="box-icon-modern-text">It has high water reduction performance and good slump loss reduction effect.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
+                    <div class="col-sm-12 col-lg-12 mb-4">
+                        <article class="products-item d-flex">
+                            <div class="col-md-4">
+                                <h5><i class="mdi mdi-forward"></i>Thixotropic Reduce</h5>
+                            </div>
+                            <div class="col-md-8">
+                                <p>By adding thixo-reduce to fresh concrete, it is expected to reduce stiffness, improve pumpability and fillability compared to conventional technology, and improve construction efficiency. It is easy to handle because the powder admixture is packed in a water-soluble paper bag and put into an agitator car or mixer.</p>
+                                <p class="gt-block">Registration date: January 31<br>
+                                    Registration number: QS-180037-A</p>
+                            </div>
+                        </article>
+                        <div class="download-pdf-catalog text-left">
+                            <a href="#"><i class="mdi mdi-file-pdf"></i> Click here for PDF catalog</a>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">High performance water reducing agent</a></h5>
-                                <p class="box-icon-modern-text">It has effective high water reduction performance and can be used for concrete products with low water-cement ratios that do not require air entrainment.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Fluidizer</a></h5>
-                                <p class="box-icon-modern-text">It is suitable for improving the fluidity of concrete on site and for producing underwater concrete.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Water reducing agent</a></h5>
-                                <p class="box-icon-modern-text">Suitable for factory-manufactured concrete products, moderate water reduction and good surface finish can be expected.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Curing accelerator</a></h5>
-                                <p class="box-icon-modern-text">Effective for concrete construction in winter when freezing is a concern.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Shrinkage reducing agent</a></h5>
-                                <p class="box-icon-modern-text">Effective in reducing drying shrinkage, which causes cracks in concrete.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">AE agent/air volume control agent</a></h5>
-                                <p class="box-icon-modern-text">Admixture for entraining air in concrete.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Admixtures for special applications</a></h5>
-                                <p class="box-icon-modern-text">We offer a wide range of admixtures for different types of concrete.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Soil and ground admixture</a></h5>
-                                <p class="box-icon-modern-text">Admixture for soil quality and ground improvement.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Curing agent</a></h5>
-                                <p class="box-icon-modern-text">A surface coating agent that assists surface finishing by preventing drying immediately after placement.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="services-modern">
-                            <div class="box-icon-modern-icon mdi mdi-chemical-weapon mb-4"></div>
-                            <article class="box-icon-modern">
-                                <h5 class="box-icon-modern-title"><a href="products-item.html">Other handling products</a></h5>
-                                <p class="box-icon-modern-text">We have various other products, so please contact us.</p>
-                                <a class="box-icon-modern-link" href="products-item.html">Read More<span class="icon mdi mdi-arrow-right"></span></a>
-                            </article>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </section>
