--- a/about-us.html
+++ b/about-us.html
@@ -74,13 +74,13 @@
                                     <li>
                                         <div class="unit unit-spacing-xs">
                                             <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                                            <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                                            <div class="unit-body"><a class="phone" href="tel:#">+880-1327-704343</a></div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="unit unit-spacing-xs">
                                             <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                                            <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a></div>
+                                            <div class="unit-body"><a class="address" href="#">Planners Tower (19th Floor), 13/A, Sonargaon Road, Dhaka, Bangladesh</a></div>
                                         </div>
                                     </li>
                                 </ul>
@@ -107,13 +107,13 @@
                                             <li>
                                                 <div class="unit unit-spacing-xs">
                                                     <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                                                    <div class="unit-body"><a class="phone" href="tel:#">+1718-999-3939</a></div>
+                                                    <div class="unit-body"><a class="phone" href="tel:#">+880-1327-704343</a></div>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="unit unit-spacing-xs">
                                                     <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                                                    <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a></div>
+                                                    <div class="unit-body"><a class="address" href="#">Planners Tower (19th Floor), 13/A, Sonargaon Road, Dhaka, Bangladesh</a></div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -187,7 +187,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-1-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-1-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-1-195x164.jpg" alt="" width="195" height="164"/></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -196,7 +196,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-2-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-2-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-2-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -205,7 +205,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-3-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-3-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-3-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -214,8 +214,8 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-4-1200x800-original.jpg" data-lightgallery="item">
-                                                        <div class="thumbnail-creative-figure"><imgsrc="images/project-4-195x164.jpg" alt="" width="195"height="164" /></div>
+                                                    <a href="images/project-4-195x164.jpg" data-lightgallery="item">
+                                                        <div class="thumbnail-creative-figure"><img src="images/project-4-195x164.jpg" alt="" width="195"height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><spanclass="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
                                                 </article>
@@ -223,7 +223,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-5-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-5-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-5-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span> </div>
                                                     </a>
@@ -232,7 +232,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-6-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-6-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-6-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span  class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -729,15 +729,14 @@
                                             <div class="unit unit-spacing-sm align-items-center">
                                                 <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span>
                                                 </div>
-                                                <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a>
+                                                <div class="unit-body"><a class="phone" href="tel:#">+880-1327-704343</a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="footer-classic-contacts-item">
                                             <div class="unit unit-spacing-sm align-items-center">
                                                 <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
-                                                <div class="unit-body"><a class="mail"
-                                                        href="mailto:#">info@demolink.org</a></div>
+                                                <div class="unit-body"><a class="mail" href="mailto:#">info@jbitl.net</a></div>
                                             </div>
                                         </div>
                                     </div><a class="button button-sm button-primary button-winona"
@@ -745,17 +744,11 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="col-lg-4 position-static">
                             <div class="footer-classic-gmap">
-                                <div class="google-map-container"
-                                    data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5"
-                                    data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png"
-                                    data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
-                                    <div class="google-map"></div>
-                                    <ul class="google-map-markers">
-                                        <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45."
-                                            data-description="9870 St Vincent Place, Glasgow"></li>
-                                    </ul>
+                                <div class="position-relative rounded overflow-hidden h-100">
+                                    <iframe class="position-relative rounded w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.0191169572836!2d90.39040727410024!3d23.746697688920833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8bd8c516435%3A0x71fb37ca3d8d8684!2sPlanners%20Tower!5e0!3m2!1sen!2sbd!4v1711964002649!5m2!1sen!2sbd" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                             </div>
                         </div>
@@ -765,9 +758,7 @@
             <div class="footer-classic-panel">
                 <div class="container">
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span
-                            class="copyright-year"></span><span>&nbsp;</span><span>Civil
-                            Group</span><span>.&nbsp;</span><a href="privacy-policy.html">Privacy policy</a></p>
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>JBITL</span><span>.&nbsp;</span><a href="privacy-policy.html">Privacy policy</a></p>
                 </div>
             </div>
         </footer>
