--- a/registered-product.html
+++ b/registered-product.html
@@ -69,13 +69,13 @@
                                     <li>
                                         <div class="unit unit-spacing-xs">
                                             <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                                            <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                                            <div class="unit-body"><a class="phone" href="tel:#">+880-1327-704343</a></div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="unit unit-spacing-xs">
                                             <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                                            <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a></div>
+                                            <div class="unit-body"><a class="address" href="#">Planners Tower (19th Floor), 13/A, Sonargaon Road, Dhaka, Bangladesh</a></div>
                                         </div>
                                     </li>
                                 </ul>
@@ -102,13 +102,13 @@
                                             <li>
                                                 <div class="unit unit-spacing-xs">
                                                     <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                                                    <div class="unit-body"><a class="phone" href="tel:#">+1718-999-3939</a></div>
+                                                    <div class="unit-body"><a class="phone" href="tel:#">+880-1327-704343</a></div>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="unit unit-spacing-xs">
                                                     <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                                                    <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a></div>
+                                                    <div class="unit-body"><a class="address" href="#">Planners Tower (19th Floor), 13/A, Sonargaon Road, Dhaka, Bangladesh</a></div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -182,7 +182,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-1-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-1-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-1-195x164.jpg" alt="" width="195" height="164"/></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -191,7 +191,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-2-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-2-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-2-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -200,7 +200,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-3-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-3-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-3-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
@@ -209,8 +209,8 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-4-1200x800-original.jpg" data-lightgallery="item">
-                                                        <div class="thumbnail-creative-figure"><imgsrc="images/project-4-195x164.jpg" alt="" width="195"height="164" /></div>
+                                                    <a href="images/project-4-195x164.jpg" data-lightgallery="item">
+                                                        <div class="thumbnail-creative-figure"><img src="images/project-4-195x164.jpg" alt="" width="195"height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><spanclass="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
                                                 </article>
@@ -218,7 +218,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-5-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-5-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-5-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span class="icon thumbnail-creative-icon linearicons-magnifier"></span> </div>
                                                     </a>
@@ -227,7 +227,7 @@
                                             <div class="col-6">
                                                 <!-- Thumbnail Creative-->
                                                 <article class="thumbnail thumbnail-creative">
-                                                    <a href="images/project-6-1200x800-original.jpg" data-lightgallery="item">
+                                                    <a href="images/project-6-195x164.jpg" data-lightgallery="item">
                                                         <div class="thumbnail-creative-figure"><img src="images/project-6-195x164.jpg" alt="" width="195" height="164" /></div>
                                                         <div class="thumbnail-creative-caption"><span  class="icon thumbnail-creative-icon linearicons-magnifier"></span></div>
                                                     </a>
